[gd_scene load_steps=9 format=2]

[ext_resource path="res://Map/GameBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/kenney_gameicons/Spritesheet/sheet_white1x.png" type="Texture" id=3]
[ext_resource path="res://UI/GrappleTheme.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 350, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 250, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 250, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 150, 50, 50, 50 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GameBackground" parent="." instance=ExtResource( 1 )]

[node name="Ceiling" type="ColorRect" parent="."]
margin_top = -26.0
margin_right = 750.0
margin_bottom = 40.0
color = Color( 0.94902, 0.454902, 0.407843, 1 )

[node name="Floor" type="ColorRect" parent="."]
margin_top = 359.0
margin_right = 750.0
margin_bottom = 504.0
color = Color( 0.94902, 0.454902, 0.407843, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 720.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 10

[node name="lblPoints" type="Label" parent="MarginContainer"]
margin_left = 40.0
margin_right = 680.0
margin_bottom = 38.0
theme = ExtResource( 4 )
text = "1,742"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 50.0
margin_right = 720.0
margin_bottom = 100.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 239.0
margin_right = 440.0
margin_bottom = 122.0

[node name="lblHighScore" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 201.0
margin_bottom = 38.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "HIGH SCORE:"

[node name="lblYourScore" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 201.0
margin_bottom = 80.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "YOUR SCORE:"

[node name="lblGamesPlayed" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 201.0
margin_bottom = 122.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "GAMES PLAYED:"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 444.0
margin_right = 481.0
margin_bottom = 122.0
custom_constants/margin_left = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 37.0
margin_bottom = 122.0

[node name="lblHighScoreValue" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
margin_right = 17.0
margin_bottom = 38.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "0"

[node name="lblYourScoreValue" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
margin_top = 42.0
margin_right = 17.0
margin_bottom = 80.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "0"

[node name="lblGamesPlayedValue" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 17.0
margin_bottom = 122.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.94902, 0.454902, 0.407843, 1 )
text = "0"

[node name="btnPlay" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 75 )
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="btnPlay"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.278431, 0.796078, 0.737255, 1 )

[node name="btnSound" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -37.5
margin_right = -140.0
margin_bottom = 37.5
toggle_mode = true
action_mode = 0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="btnSound"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.278431, 0.796078, 0.737255, 1 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = -37.5
margin_right = 290.0
margin_bottom = 37.5
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="TextureButton"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.278431, 0.796078, 0.737255, 1 )

[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="toggled" from="btnSound" to="." method="_on_btnSound_toggled"]
